fix: alignment of logo in all pages in media query min-width: 1025px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1552,6 +1552,10 @@ form label {
           line-height: 12px;
           font-weight: bold;
           margin-left: 50px;
+          margin-top: 0px;
+
+          position: absolute;
+          top: 10px;
     }
 
     /*Page header Styling  */
